# DynOpt

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
examples/: DynO_example2D.ipynb  DynO_example3D.ipynb  README.md
src/: __init__.py  dyno.py  stuff.py
src/DynOpt/: __init__.py  dyno.py
