[build-system]
requires = [
    "setuptools>=42",
    "wheel"
    ]
build-backend = "setuptools.build_meta"


[project]
name = "DynOpt"
version = "0.2"
authors = [
  { name="Federico Florit", email="federico.florit@gmail.com" },
]
description = "Dynami optimization toolbox for flow chemistry"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/fflorit/DynOpt"
